# nh-paper-widget

./: .gitignore  Cargo.toml  LICENSE  README.adoc  flake.nix  index.html  node-packages.nix  package-lock.json  package.json  style.css  tsconfig.json  webpack.config.js
.github/workflows/: test.yml
built/: hcClient.js  main.js
crates/hub/: Cargo.toml
crates/hub/src/: lib.rs  util.rs
crates/memez/: Cargo.toml
crates/memez/src/: lib.rs
crates/paperz/: Cargo.toml
crates/paperz/src/: lib.rs  util.rs
happs/hub/: dna.yaml  happ.yaml
happs/memez/: dna.yaml  happ.yaml
happs/paperz/: dna.yaml  happ.yaml
js/: hcClient.js  hubClient.js  main.js  zomeApi.js
src/: hcClient.ts
src/types/: sensemaker.ts  types.ts
ui/: logConfig.ts  main.ts  zomeApi.ts
ui/types/: paperz.ts  sensemaker.ts
