[package]
name = "hub"
version = "0.1.0"
authors = ["Shane O'Donnell <shane.odonnell@steeltoad.io>"]
edition = "2018"
license = "MIT"

[dependencies]
hdk = "0.0.132"
serde = "1"

common = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "27434917ed848eb5c9c29e5899c870d16baf8c8c" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
