[package]
name = "hub"
version = "0.1.0"
authors = ["Shane O'Donnell <shane.odonnell@steeltoad.io>"]
edition = "2018"
license = "MIT"

[dependencies]
hdk = "0.0.132"
serde = "1"

# common = { path = "../../../social_sensemaker/crates/common" }
common = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "1ab7213f11f9f62e022bb98b55a3e8366a8cafdd" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "bf44c3e80e0c98cfded6b7c1ba7caa38cb2449a8", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
