[package]
name = "memez"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"

[dependencies]
hdk = "0.0.117"
serde = "1"

common = { git = "https://github.com/neighbour-hoods/rep_interchange.git", rev = "b9ffcc769548e1a3e3bc03da52c79fa2ab587f6f" }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "5d81b5ced5ff29d6c9f0d436bde134993c148bd6", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
