[package]
name = "memez"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"

[dependencies]
hdk = "0.0.117"
serde = "1"

common = { git = "https://github.com/neighbour-hoods/rep_interchange.git", rev = "d99f636463de718bb6011d976d543db2421e043a" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "7ebd5b212ee995bd1f4f7f1a8dbe5a60bb75dd01", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "7ebd5b212ee995bd1f4f7f1a8dbe5a60bb75dd01", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
