[package]
name = "memez"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"

[dependencies]
hdk = "0.0.117"
serde = "1"

common = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "f6083901443dc3223c7b6c0a9b01f0b92645ac01" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3cadc2eebe7c315844527de4bab7398108a17b57", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "3cadc2eebe7c315844527de4bab7398108a17b57", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
