[package]
name = "paperz"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license = "MIT"

[dependencies]
hdk = "0.0.136"
serde = "1"

# common = { path = "../../../social_sensemaker/crates/common" }
common = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "a53bfd1a52dfe1b1bb53675213713f17d9235abf" }
rep_lang_core = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "779822b196f9073f5119864143bdc6d1ee6deed9", features = ["hc"] }
rep_lang_runtime = { git = "https://github.com/neighbour-hoods/rep_lang.git", rev = "779822b196f9073f5119864143bdc6d1ee6deed9", features = ["hc"] }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
