[package]
name = "paperz"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license = "MIT"

[dependencies]
hdk = "0.0.136"
serde = "1"

# common = { path = "../../../social_sensemaker/crates/common" }
common = { git = "https://github.com/neighbour-hoods/social_sensemaker.git", rev = "d388d8ccbeecb54345cb18d7de32921aa672f7c1" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
